--- a/style.scss
+++ b/style.scss
@@ -1,21 +1,9 @@
 /*
-Theme Name: Sene
-Author: UpMarketing Digital - Jonilson / Wacrksson
+Theme Name: ---
+Author: Lucas Peixoto
 Version: 0.5
 */
 
-/* ------------------------------------- */
-/* TABLE OF CONTENTS
-/* -------------------------------------
-  1. FIXED AND PERMANENT STYLING
-  2. GENERAL
-    -2.1 SECTION TITLE
-  ------------------------------------- */
-
-
-/*==========================================================================
-  1. FIXED AND PERMANENT STYLING
-  ==========================================================================*/
 @charset "UTF-8";
 
 .alignleft {
@@ -48,7 +36,3 @@ Version: 0.5
         img { width: 100%; height: auto; }
     }
 }
-
-/*==========================================================================
-  2. GENERAL
-  ==========================================================================*/
