--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 /*
-Theme Name: ---
-Author: Lucas Peixoto
-Version: 0.5
+Theme Name: Tema IACC
+Author: UpMarketing Digital
+Author URI: http://www.upmarketingdigital.com.br
+Description: Tema no wordpress para o site da organização IACC.
+Tags: IACC, Apoio, Cancer infantil, Cura
+Version: 1.0
 */
 .alignleft {
   float: left;
