--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ Version: 1.0
 /*==========================================================================
   1. FIXED AND PERMANENT STYLING
   ==========================================================================*/
-  
+
 .alignleft {
   float: left;
   margin-right: 1.5em;
@@ -69,4 +69,405 @@ Version: 1.0
     height: auto;
   }
 }
-/*# sourceMappingURL=style.css.map */
+/*==========================================================================
+  2. GENERAL
+  ==========================================================================*/
+
+  body {
+    font-family: 'Roboto', sans-serif !important;
+    overflow-x: hidden;
+    width: 100% !important;
+    font-size: 14px;
+  }
+
+  .font-light{
+    font-weight: 300;
+  }
+
+  .font-bold {
+    font-weight: 700;
+  }
+
+  .date-news{
+    color: #ed1550;
+    font-size: 12px;
+  }
+
+  .previous-news{
+    font-size: 13px;
+  }
+
+  .title-news{
+    font-weight: 700;
+    font-size: 18px;
+  }
+
+  .section-navbar {
+    background-color: #ed1550 !important;
+    color: #fff;
+    font-size: 16px;
+  }
+
+  .button-store-yellow-bar {
+    display: none;
+  }
+
+  .button-store {
+    background-color: #fff200;
+    text-transform: uppercase;
+    padding: 5px 15px;
+    border-radius: 10px;
+    color: #000000;
+    position: relative;
+  }
+
+  .button-store a {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .navbar {
+    background-color: #ed1550 !important;
+    color: #ffffff;
+  }
+
+  .nav-item a {
+    font-size: 13px;
+    color: #000000 !important;
+  }
+
+  .dropdown:hover .dropdown-menu{
+    display: block;
+  }
+
+  .dropdown-backgroud{
+    background-color: #fff200 !important;
+  }
+
+
+  .section-top-bar{
+    background-color: #fff200 !important;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
+  .nav-yellow{
+    background-color: #fff200 !important;
+  }
+
+  .main-slide-show {
+    width: 100%;
+    margin: 30px 0;
+  }
+
+   .section-donation-bar {
+     background-color: #ffffff;
+   }
+
+   .wellow-background {
+     background-color: #fff200;
+     margin-top: 30px;
+     position: relative;
+   }
+
+   .image-toy {
+     position: relative;
+   }
+
+   .image-toy img {
+     position: absolute;
+     top: 0;
+     left: 0;
+   }
+
+   .donation-content {
+     color: #000000;
+     padding-top: 15px;
+     padding-bottom: 15px;
+   }
+
+   .donaiton-title{
+     font-size: 30px;
+     margin-top: 14px;
+   }
+
+   .btn-donation {
+    font-family: arial;
+    border:none;
+    padding:10px;
+    cursor: pointer;
+    display:inline-block;
+    text-decoration: none;
+    border-radius: 15px;
+  }
+
+  .btn-donate {
+    background:#fff200;
+    color:#000;
+    box-shadow:0 5px 0 #b1a804;
+  }
+
+  .btn-donate:hover {
+    background:#ed1550;
+    box-shadow:0 7px 0 #b40433;
+    color: #fff;
+  }
+
+  .btn-donate:active{
+    position:relative;
+    top:5px;
+    box-shadow:none;
+  }
+
+
+
+  .section-news {
+    background-color: #f0f0f0;
+    margin: 30px 0;
+    padding: 30px 0;
+  }
+
+  .news-space {
+    padding-bottom: 20px;
+  }
+
+  .image-new {
+    padding-bottom: 10px;
+  }
+
+  .btnMore {
+    position: relative;
+  }
+
+  .btnMore a {
+    position: absolute;
+    background-color: #ed1550;
+    color: #fff;
+    border-radius: 15px;
+    padding: 5px;
+    bottom: -50px;
+    left: calc(50% - 100px);
+    width: 200px;
+    font-size: 18px;
+    text-transform: uppercase;
+    text-decoration: none;
+    border:  2px solid transparent;
+    transition: all .2s;
+  }
+
+  .btnMore a:hover {
+    background-color: #fff200;
+    color: #000000;
+    border: 2px solid #ed1550;
+  }
+
+
+  /* start section about */
+  .section-about {
+    margin: 30px 0;
+    background-color: #f8f4f1;
+  }
+
+  .image-background {
+    background-image: url(../img/slider2.png);
+    background-repeat: no-repeat;
+  	background-position: 0 0;
+    background-size: contain;
+  }
+
+  .content-about {
+    padding-top: 65px;
+    padding-bottom: 80px;
+  }
+
+  .about-title {
+    color: #02bef2;
+  }
+
+  .slide-about {
+    padding-right: 10px;
+  }
+  /* end section about */
+
+  /*===================================================================
+    start section section-gallery
+    =================================================================== */
+  .section-gallery {
+    background-color: #f0f0f0;
+    width: 100%;
+    height: 520px;
+    position: relative;
+  }
+
+  .btn-our-gallery {
+    position: absolute;
+    background-color: #fff200;
+    color: #000000;
+    border-radius: 100px;
+    top: calc(50% - 100px);
+    left: calc(50% - 100px);
+    width: 200px;
+    height: 200px;
+    font-size: 30px;
+    text-transform: uppercase;
+    /* border:  2px solid transparent;
+    transition: all .2s; */
+  }
+
+  .btn-our-gallery i {
+    display: block;
+    font-size: 30px;
+  }
+
+  .align-text-btn-gallery {
+    text-align: center;
+  }
+
+  .text-gallery {
+    font-weight: 700;
+    line-height: 1;
+  }
+
+  .btn-our-gallery a {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border-radius: 100px;
+  }
+
+  /*===================================================================
+    start section-partners
+    =================================================================== */
+  .section-partners{
+    margin: 30px 0;
+    background: #f0f0f0;
+    padding-bottom: 15px;
+  }
+
+  .name-partners{
+    color: #ed1550;
+    font-size: 36px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .partners-slide div {
+    height: 100px;
+    font-size: 20px;
+  }
+
+  .partner-image {
+    padding-top: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  /*===================================================================
+    start section-contato-us
+    =================================================================== */
+  .contato-us{
+    background-color: #1bc4f3;
+  }
+
+  .font-title-footer{
+    color: white;
+    font-size: 30px;
+    padding-top: 30px;
+  }
+
+  .newsletter{
+    padding-top: 30px;
+  }
+
+  .btn-submit {
+    background-color: #FFFFFF;
+    color: #02bef2;
+    border-radius: 0 !important;
+  }
+
+  .font-input{
+    color: #202020;
+    font-style: italic;
+  }
+
+  .footer-part-2 {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .groups-text-footer {
+    font-size: 14px;
+    color: #ffffff;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  /* end section-contato-us*/
+
+
+  footer {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: #ffffff;
+    color: #000000;
+    font-size: 14px;
+  }
+
+  .up-marketing-digital {
+    text-decoration: none;
+    color: #000000 !important;
+  }
+
+  @media (max-width: 767px) {
+    .logotipo {
+      max-height: 70px;
+    }
+
+    .cart {
+      margin-left: 0;
+    }
+
+    .logo-tag {
+      width: 100%;
+      text-align: center;
+    }
+
+    .phone-navbar {
+      display: none;
+    }
+
+    .button-store {
+      display: none;
+    }
+
+    .button-store-yellow-bar {
+      display: block;
+    }
+
+    /* modificar quando alterar o slide-show */
+    .slide-show div {
+      height: 250px;
+    }
+
+    .img-toy {
+      display: none;
+    }
+
+    .img {
+      width: 100vw;
+    }
+
+    .donaiton-title{
+      margin-top: 0;
+    }
+
+    .image-background {
+      background-image: none;
+    }
+
+  }
