--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ Version: 1.0
   .date-news{
     color: #ed1550;
     font-size: 12px;
+    text-transform: uppercase;
   }
 
   .previous-news{
@@ -268,8 +269,20 @@ Version: 1.0
     padding-bottom: 20px;
   }
 
+  .news-link {
+    position: relative;
+  }
+
+  .news-link > a.all {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+
   .image-new {
-    padding-bottom: 10px;
+    border: 1px solid #ed1550;
   }
 
   .btnMore {
@@ -332,8 +345,8 @@ Version: 1.0
   .section-gallery {
     background-color: #f0f0f0;
     width: 100%;
-    height: 520px;
     position: relative;
+    padding-bottom: 10px;
   }
 
   .btn-our-gallery {
@@ -498,6 +511,18 @@ Version: 1.0
 
     .donaiton-title{
       margin-top: 0;
+    }
+
+    .image-new {
+      display: none;
+    }
+
+    .image-category {
+      display: none;
+    }
+
+    .text-category {
+      padding-left: 0px !important;
     }
 
     .image-background {
