--- a/style.css
+++ b/style.css
@@ -536,5 +536,25 @@ Version: 1.0
       }
     }
 
+    @media (max-width: 767px) {
+      .post-project {
+        flex-wrap: wrap;
+      }
+
+      .image-project {
+        order: 1;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin-bottom: 5px;
+      }
+
+      .content-project {
+        order: 2;
+        padding-left: 5px !important;
+        padding-right: 5px !important;
+      }
+    }
+
 
   }
