--- a/style.css
+++ b/style.css
@@ -529,32 +529,55 @@ Version: 1.0
       background-image: none;
     }
 
-    @media (min-width: 992px) {
-      .navbar-expand-lg .navbar-nav .nav-link {
-          padding-right: .3rem !important;
-          padding-left: .3rem !important;
-      }
+  }
+
+  @media (min-width: 992px) {
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-right: .3rem !important;
+        padding-left: .3rem !important;
+    }
+  }
+
+  @media (max-width: 767px) {
+    .post-project {
+      flex-wrap: wrap;
     }
 
-    @media (max-width: 767px) {
-      .post-project {
-        flex-wrap: wrap;
-      }
-
-      .image-project {
-        order: 1;
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        margin-bottom: 5px;
-      }
-
-      .content-project {
-        order: 2;
-        padding-left: 5px !important;
-        padding-right: 5px !important;
-      }
+    .image-project {
+      order: 1;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      margin-bottom: 5px;
     }
 
+    .content-project {
+      order: 2;
+      padding-left: 5px !important;
+      padding-right: 5px !important;
+    }
 
+    .text-bank-account {
+      text-align: center !important;
+    }
+    .text-bank-account span {
+      text-align: center !important;
+      display: block !important;
+    }
+  }
+
+  .divslideshow {
+    width: 100%;
+  }
+
+  .divslideshow::before {
+    content: '';
+    padding-top: 30%;
+    float: left;
+  }
+
+  .divslideshow::after {
+    content: '';
+    display: block;
+    clear: both;
   }
